# vp_detect

./: CMakeLists.txt  MSAC.cpp  README.md  main.cpp  package.xml  vp_detect.kdev4
.kdev4/: vp_detect.kdev4
Data/: PrimeSense.yaml  PrimeSense.yaml~  Settings_jp_ueye.yaml
include/: MSAC.h
script/: camera.sh  video.sh
src/: MSAC.cpp  main.cpp
